# vcs

./: .gitignore  AGENTS.md  Makefile  README.md  SPEC.md  commands.go  commands_test.go  go.mod
autofetch/: autofetch.go  autofetch_test.go
cmd/vcs/: main.go  main_test.go
cmd/vcs-git/: commands_test.go  main.go  main_test.go  setup_test.go
cmd/vcs-hg/: commands_test.go  main.go  main_test.go  setup_test.go
cmd/vcs-jj/: commands_test.go  main.go  main_test.go  setup_test.go
cmd/vcs-p4/: commands_test.go  listcmds.go  main.go  main_test.go  setup_test.go
internal/fetchlock/: fetchlock.go
internal/jjsync/: jjsync.go  jjsync_test.go
internal/testenv/: testenv.go
promptinfo/: promptinfo.go  promptinfo_test.go  setup_test.go
promptline/: promptline.go  promptline_test.go  setup_test.go
runner/: runner.go  runner_test.go
rust/: Cargo.toml
rust/crates/runner/: Cargo.toml
rust/crates/runner/src/: lib.rs
rust/crates/vcs/: Cargo.toml
rust/crates/vcs-git/: Cargo.toml
rust/crates/vcs-git/src/: main.rs
rust/crates/vcs-git/tests/: status.rs
rust/crates/vcs/src/: main.rs
rust/crates/vcsdetect/: Cargo.toml
rust/crates/vcsdetect/src/: lib.rs
vcsdetect/: detect.go  detect_test.go
version/: version.go  version_test.go
